# mannd

./: .gitignore  .vale.ini  Cargo.toml  Dioxus.toml  LICENSE  Makefile  README.md  input.css  run.sh  rustfmt.toml
assets/: tailwind.css
assets/styles/: main.css  tailwind.css
com/: Cargo.toml  build.rs
com/src/: controller.rs  error.rs  ethtool.rs  ini_parse.rs  lib.rs  netlink.rs  signals.rs  store.rs  utils.rs  wireguard.rs
com/src/state/: network.rs  signals.rs
com/src/systemd/: networkd.rs  systemctl.rs
com/src/wireguard/: mod.rs  network.rs  store.rs  wireguard.rs
com/src/wireless/: agent.rs  common.rs  iwd.rs  mod.rs  wpa_supplicant.rs
com/src/wireless/defs/: README.md  bss.rs  interface.rs  mod.rs
com/wpa_supplicant/: README.md  wrapper.h
core/: Cargo.toml
core/src/: error.rs  ini_parse.rs  lib.rs  store.rs
core/src/state/: network.rs
core/src/wireless/: iwd.rs  mod.rs
etc/: mannd-startup.service  settings.conf  settings.conf.bak  wifi.conf.schema  wpa.conf.schema
gui/: Cargo.toml  input.css  package-lock.json  package.json  run_dev.sh  rust-analyzer.toml
gui/assets/styles/: main.css  tailwind.css
gui/src/components/: menu_header.rs  mod.rs  tab_switch.rs
gui/src/utils/: config.rs
mannd/: Cargo.toml
mannd/src/: config.rs  controller.rs  error.rs  ini_parse.rs  lib.rs  netlink.rs  store.rs  utils.rs
mannd/src/state/: actor.rs  messages.rs  mod.rs  network.rs  signals.rs
mannd/src/systemd/: networkd.rs  systemctl.rs
mannd/src/wireguard/: mod.rs  network.rs  wg_ini.rs
mannd/src/wireless/: agent.rs  common.rs  iwd.rs  mod.rs  wifi_config.rs  wpa_config.rs  wpa_supplicant.rs
nd_common/: Cargo.toml
nd_common/src/: controller.rs  error.rs  lib.rs  netlink.rs
nd_common/src/nl80211/: defs.rs  interface.rs  mod.rs  socket.rs  wireless.rs
nd_common/src/nl80211/defs/: attr.rs  bss.rs  interface.rs  station.rs
nd_common/src/systemd/: mod.rs
nd_common/src/wireless/: iwd.rs  mod.rs  netlink.rs  wpa_supplicant.rs
nd_common/src/wireless/defs/: station.rs
src/: app.rs  lib.rs  main.rs
src/cli/: commands.rs  config.rs  folders.rs  mod.rs
src/components/: menu_header.rs  mod.rs
src/gui/: main_panel.rs  menu.rs  mod.rs  sidebar.rs
src/utils/: config.rs
src/view/: main_view.rs  menu.rs  mod.rs
tui/: Cargo.toml  example_config.toml  example_settings.conf
tui/src/: app.rs  error.rs  event.rs  keys.rs  lib.rs  main.rs  network.rs  state.rs  ui.rs
tui/src/components/: connection.rs  err_prompt.rs  layout.rs  main_menu.rs  menu.rs  mod.rs  net_prompt.rs  network.rs  networkd_ui.rs  password_prompt.rs  popup_prompt.rs  wifi_menu.rs  wireguard_ui.rs  wpa_interface_ui.rs
tui/src/state/: menu.rs  mod.rs  networkd.rs  prompts.rs  vpn.rs  wifi.rs
