[workspace]
resolver = "3"
members = ["mannd", "tui"]

[workspace.dependencies]
serde = "1.0.228"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "signal",
] }
tokio-util = { version = "0.7.18", default-features = false, features = [
    "codec",
] }
futures = "0.3.31"
futures-timer = "3.0.3"
tracing = "0.1.41"
derive_builder = "0.20.2"
tracing-error = "0.2.1"
postcard = { version = "1.1.3", default-features = false, features = [
    "use-std",
] }
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
bitflags = { version = "2.10.0", features = ["serde"] }
libc = { version = "0.2.183" }

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true
panic = "abort"
debug = false
incremental = false

[workspace.lints.clippy]
redundant_static_lifetimes = "warn"
from_over_into = "warn"
ptr_arg = "warn"
