[workspace]
resolver = "3"
members = ["mannd", "tui"]

[workspace.dependencies]
serde = "1.0.228"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "signal",
] }
tokio-util = { version = "0.7.18", default-features = false, features = [
    "codec",
] }
futures = "0.3.31"
futures-timer = "3.0.3"
tracing = "0.1.41"
derive_builder = "0.20.2"
tracing-error = "0.2.1"
postcard = { version = "1.1.3", default-features = false, features = [
    "use-std",
] }
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
bitflags = { version = "2.10.0", features = ["serde"] }
libc = { version = "0.2.183" }

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true
panic = "abort"
debug = false
incremental = false

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
clone_on_ref_ptr = "warn"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cargo_common_metadata = "allow"
