[package]
name = "com"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { workspace = true }
caps = { version = "0.5.6" }
derive_builder = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
neli = { version = "0.7.1", features = ["async", "tokio"] }
neli-proc-macros = "0.2.1"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.17"
tracing = { workspace = true }
zbus = { version = "5.10.0", default-features = false, features = ["tokio"] }
zbus_systemd = { version = "0.25701.0", features = [
  "network1",
  "resolve1",
  "systemd1",
] }

[build-dependencies]
which = { version = "8.0.0" }

[target.'cfg(target_os = "linux")']
rustflags = ["-C", "link-arg=-fuse-ld=mold"]
