[package]
name = "gui"
version = "0.1.0"
authors = ["Alexander Sikomas"]
edition = "2021"

[dependencies]
com = { path = "../com" }
dioxus = { version = "0.6.0", features = [] }
dioxus-free-icons = { version = "0.9", features = ["font-awesome-solid"] }
dirs = "6.0.0"
futures-util = "0.3.31"
serde = "1.0.219"
tokio = { version = "1.47.1", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time",
] }
toml = "0.9.5"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
#
# [profile.wasm-dev]
# inherits = "dev"
# opt-level = 1

# [profile.server-dev]
# inherits = "dev"
#
# [profile.android-dev]
# inherits = "dev"
