[package]
name = "mannd"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
bitflags = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
neli = { version = "0.7.1", features = ["async", "tokio"] }
neli-proc-macros = "0.2.1"
postcard = { workspace = true }
redb = "3.1.0"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = "0.1.17"
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
zbus = { version = "5.10.0", default-features = false, features = ["tokio"] }
zbus_systemd = { version = "0.25701.0", features = [
    "network1",
    "resolve1",
    "systemd1",
] }
nyquest = { version = "0.4.0", default-features = false, features = ["async"] }
tempfile = "3.26.0"
clap = { version = "4.6.0", features = ["derive"] }
libc = { workspace = true }

[dev-dependencies]
mockall = "0.14.0"

[target.'cfg(target_os = "linux")']
rustflags = ["-C", "link-arg=-fuse-ld=mold"]

[lints]
workspace = true
