[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
com = { path = "../com" }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
futures-timer = "3.0.3"
ratatui = { version = "0.29.0", default-features = false, features = [
  "crossterm",
] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "linux")']
rustflags = ["-C", "link-arg=-fuse-ld=mold"]
