[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
mannd = { path = "../mannd" }
ahash = "0.8.12"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = { workspace = true }
futures-timer = { workspace = true }
ratatui = { version = "0.30.0", default-features = false, features = [
    "crossterm",
] }
serde = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
derive_builder = { workspace = true }
rpassword = "7.4.0"

[target.'cfg(target_os = "linux")']
rustflags = ["-C", "link-arg=-fuse-ld=mold"]
